This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

24-Dec 2008 (Gnomi)
  - (ed.c)
    The reference count of the filename and the exit function
    wasn't cleared in a GC. (Bug #398)
  
15-Dec 2008 (Zesstra)
  - (object.c)
    Fixed potential crashes in rename_object() and replace_program() due to
    stack overflows. (Bug #581)

14-Dec 2008 (Gnomi)
  - (src/interpret.c, src/autoconf/*)
    Added option to show the evaluation costs in the stacktrace.
  - (src/pkg-iksemel.c, many files)
    Added support for XML parsing with iksemel. (Bug #538, thanks, Bardioc!)
            (Zesstra)
  - (efuns.c)
    Fixed potential crashes due to stack overflows in process_string(),
    regexplode(), regexp() and present_clone(). (Bug #578)
  - (interpret.h, interpret.c, efuns.c, mudlib/sys/debug_info.h,
    doc/efun/debug_info, doc/efuns.de/debug_info.de)
    Added control_stack_depth() to determine the number of frames on the
    control stack and added flag DIT_CURRENT_DEPTH to
    debug_info(DINFO_TRACE,...).
  - (interpret.c)
    Replaced call to exit() by a call to fatal() in asster_master_ob_loaded()
    to allow core dumpes to be written in cases when the master object could
    not be loaded and there is no destructed master as well. (Bug #570).
  - (simulate.c)
    Fixed potential crash due to stack overflow in load_object(). (Bug #580).

13-Dec 2008 (Zesstra)
  - (pkg-mysql.c)
    Allocate temporary memory for the temporary string in f_db_conv_string()
    on the heap, because the string is user supplied and calling the
    function with a large string may cause a crash due to stack overflow.
    (Bug #582)
  - (efuns.c, strfuns.c)
    Corrected format specifiers in errorf() calls.

12-Dec 2008 (Zesstra)
  - (port.h, port.c, efuns.h, efuns.c, func_spec, gcollect.c)
       added mkime(), an efun which converts a date/time information as