@@ -11,6 +11,10 @@ xx-xxx-xxxx () -- 3.3.718
                      string with a variety of format specifiers.
        + xml_generate(), xml_parse(): Optional XML support.
 
+    - Language
+       + Disallowed case labels in inner blocks of switch statements
+          and variable declarations that cross case labels.
+
 10-Aug-2008 (Lars Duening) -- 3.3.717
     - Changed Efuns:
        + md5(): The efuns costs 10 eval ticks per iteration (Bug #485).
